# interpreterpattern_cpp

./: .gitignore  readme.md
src/: CMakeLists.txt
src/pattern1/: CMakeLists.txt  context.h  main.cpp  policy.h
src/pattern2/: CMakeLists.txt  abstractpolicy.cpp  abstractpolicy.h  main.cpp  necessaryreservedseatpolicy.cpp  necessaryreservedseatpolicy.h  policy.cpp  preferreservedseatpolicy.cpp  preferreservedseatpolicy.h  preferunreservedseatpolicy.cpp  preferunreservedseatpolicy.h
